# the_schnitz

./: .flaskenv  .gitignore  pyproject.toml  requirements.txt
src/the_schnitz/: __init__.py  app.py  callbacks.py  cli.py  config_loader.py  decorators.py  default_config.py  default_settings.py  events.py  location.py  rabbitmq.py  repository.py  schema.py  services.py
src/the_schnitz/config_loader/: locations.py
src/the_schnitz/views/: api.py  discovery.py
