[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the_schnitz"
version = "0.0.1"

dependencies = [
  "Flask",
  "click",
  "marshmallow",
  "msgpack",
  "pika",
  "playsound3",
  "pyyaml",
  "redis",
]

[project.scripts]
schnitz = "the_schnitz.cli:cli"
